# AutomationMenu

./: .gitignore  README.md  babel.cfg  main.py  pyproject.toml  requirements.txt  secrets.template.json
Script/: AMTest_Breakpoint.py  AMTest_ErrorAndOutput.py  AMTest_ErrorOutput.py  AMTest_Input.py  AMTest_Input_2.py  AMTest_KeePassSetting.py  AMTest_Output.py  AMTest_OutputPS.ps1  AMTest_Progressbar.py  AMTest_ScriptCrash.py  AMTest_Status.py
automation_menu/: models.py
automation_menu/api/: __init__.py  script_api.py
automation_menu/core/: __init__.py  app_context.py  application_state.py  auth.py  execution_manager.py  script_api.py  script_discovery.py  script_execution_manager.py  script_menu_item.py  script_runner.py  sequence_menu_item.py  state.py
automation_menu/filehandling/: exec_history_handler.py  script_discovery.py  secrets_handler.py  settings_handler.py
automation_menu/models/: __init__.py  application_state.py  custom_exceptions.py  enums.py  exechistory.py  geometry.py  script.py  scriptinfo.py  scriptinputparameter.py  scriptmetadata.py  secrets.py  sequence.py  sequencestep.py  settings.py  sysinstructions.py  user.py
automation_menu/ui/: async_output_controller.py  config_ui_style.py  custom_labelframe.py  custom_menu.py  history_manager.py  history_tab.py  input_frame.py  input_manager.py  main_window.py  op_buttons.py  output_controller.py  output_tab.py  sequence_manager.py  settings_tab.py  statusbar.py
automation_menu/utils/: build_run_args.py  config.py  decorators.py  docstring_parser.py  email_handler.py  language_manager.py  localization.py  logging_utils.py  output_message_manager.py  screenshot.py  script_manager.py  (+1 more)
extras/: manage_translations.py
locales/: messages.pot
(+2 files in other folders)
