[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-menu"
version = "1.0.0"
description = "A GUI application to collect and run automation scripts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Smorkster"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "alwaysontop_tooltip==1.2",
    "dynamicinputbox==1.3.1",
    "ldap3==2.9.1",
    "pywin32==310",
    "pywin32==311",
    "UiAutomation==2.0.29"
]

[project.scripts]
automation-menu = "main:main"