[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["automation_menu"]

[project]
name = "automation-menu"
version = "1.0.0"
description = "A GUI application to collect and run automation scripts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Smorkster", email = "smorkster@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "alwaysontop_tooltip==1.3",
    "dynamicinputbox==1.3.1",
    "ldap3==2.9.1",
    "pywin32==311",
    "UiAutomation==2.0.29"
]
scripts = {main = "main:main"}
